Fix misc. CSS issues.
- The tr/tbody border thing finally seems to look alright in every
  browser lol.  IE/Edge still didn't look quite right with ridge.

- I made the table padding consistent; td.pokemon-collapse-cell was
  assuming it had to make up 2rem, not 2.5rem.

- *.collapsed-only { display: none; } was erroneous, but wasn't causing
  problems because label.pokemon-expand-label { display: block; } had
  higher specificity.

--- a/porygo_nz/static/porygo-nz.css
+++ b/porygo_nz/static/porygo-nz.css
@@ -169,14 +169,18 @@ tbody:last-of-type { border-bottom-width: 2px; }
 tbody:nth-of-type(odd) { background-color: #F8F8F8; }
 tbody:nth-of-type(even) { background-color: #E8E8E8; }
 
-tbody + tbody { border-top: 1px solid #D8D8D8; }
-tbody:nth-of-type(odd) > tr + tr { border-top: 1px ridge #E8E8E8; }
-tbody:nth-of-type(even) > tr + tr { border-top: 1px ridge #D8D8D8; }
+tbody + tbody {
+    /* 1px double looks the same as solid, but will take precedence over a tr's
+       solid border */
+    border-top: 1px double #D8D8D8;
+}
+
+tbody:nth-of-type(odd) > tr + tr { border-top: 1px solid #E8E8E8; }
+tbody:nth-of-type(even) > tr + tr { border-top: 1px solid #D8D8D8; }
 
 td, th { padding: 0 0.5rem; }
-td:first-child, th:first-child { padding-left: 2.5rem; }
-td:last-child, th:last-child { padding-right: 2.5rem; }
-td:empty, th:empty { padding: 0; }
+td:first-child, th:first-child { padding-left: 2rem; }
+td:last-child, th:last-child { padding-right: 2rem; }
 
 td.pokemon-collapse-cell { width: 1rem; padding-right: 0; }
 td.pokemon-collapse-cell:first-child { padding-left: 0.5rem; }
@@ -191,7 +195,7 @@ td.pokemon-icon-cell:first-child { padding-left: calc(1.5rem - 5px); }
 td.ability-cell { height: 2.5rem; }
 td.stat-cell { width: 3ch; text-align: right; }
 th.stat-cell { padding-left: 0; padding-right: 0; }
-th.stat-cell:last-child { padding-right: 2rem; }
+th.stat-cell:last-child { padding-right: 1.5rem; }
 
 /* Pokémon table alt. form collapsing */
 input.pokemon-collapse { display: none; }
@@ -206,8 +210,6 @@ label.pokemon-expand-label {
 
 label.pokemon-collapse-label { background: url(/static/arrow-down.svg); }
 label.pokemon-expand-label { background: url(/static/arrow-right.svg); }
-
-*.collapsed-only { display: none; }
 
 /* Type icons */
 a.type {
